--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.4.3",
+    "next-intl": "2.15.0-beta.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
